--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@ body {
   background-color: #e6ecf0;
 }
 
-/* Navbar*/
+/* Nav */
 
 .navbar {
   margin-bottom: 1rem;
@@ -22,9 +22,9 @@ body {
 .navbar-brand > img {
   display: inline-block;
   width: 20px;
-  border-radius: 2px;
   margin-bottom: 2px;
   margin-right: 5px;
+  border-radius: 2px;
 }
 
 ul.nav.navbar-nav li {
@@ -40,9 +40,10 @@ ul.nav.navbar-nav li {
   width: 100vw;
   height: 100vh;
   position: absolute;
-  top: 0%;
-  left: 0%;
+  top: 0;
+  left: 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: -1;
@@ -51,7 +52,36 @@ ul.nav.navbar-nav li {
   padding: 1rem;
   background-position: center center;
   background-size: cover;
-  flex-direction: column;
-  color: white;
+  color: #fff;
   text-shadow: 0 0 8px #66757f;
+}
+
+#messages .list-group-item {
+  display: flex;
+  align-items: flex-start;
+  padding: 7px 20px 12px;
+}
+
+#messages:not(.no-hover) .list-group-item:hover {
+  background-color: #e6ecf0;
+}
+
+.timeline-image {
+  border-radius: 50px;
+  height: 48px;
+  width: 48px;
+  margin: 2px 30px 10px 10px;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+a.btn.btn-danger,
+a.btn.btn-danger:hover {
+  color: white;
+}
+
+.navbar-header {
+  margin: 0 auto;
 }
